--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@farcaster/miniapp-wagmi-connector": "^1.0.0",
     "@tanstack/react-query": "^5.64.2",
     "@upstash/redis": "^1.35.1",
-    "next": "14.2.6",
+    "next": "^15.5.2",
     "react": "^18",
     "react-dom": "^18",
     "viem": "^2.22.22",
